[gd_scene load_steps=60 format=2]

[ext_resource path="res://fonts/Aa你是我的惊天动地.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Bird.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI.gd" type="Script" id=5]
[ext_resource path="res://Ding.tscn" type="PackedScene" id=6]
[ext_resource path="res://WorldEnvironment.gd" type="Script" id=7]
[ext_resource path="res://nv.gd" type="Script" id=8]
[ext_resource path="res://Introduction2.gd" type="Script" id=9]
[ext_resource path="res://Introduction.gd" type="Script" id=10]
[ext_resource path="res://Introduction3.gd" type="Script" id=11]
[ext_resource path="res://Introduction4.gd" type="Script" id=12]
[ext_resource path="res://sheng.gd" type="Script" id=13]
[ext_resource path="res://kuai.gd" type="Script" id=14]
[ext_resource path="res://le.gd" type="Script" id=15]
[ext_resource path="res://jie.gd" type="Script" id=16]
[ext_resource path="res://EndLabel.gd" type="Script" id=17]
[ext_resource path="res://FakeBird.gd" type="Script" id=18]
[ext_resource path="res://Bird/to_circle4.png" type="Texture" id=19]
[ext_resource path="res://Bird/to_circle5.png" type="Texture" id=20]
[ext_resource path="res://Bird/bird2.png" type="Texture" id=21]
[ext_resource path="res://Bird/to_circle1.png" type="Texture" id=22]
[ext_resource path="res://Bird/bird4.png" type="Texture" id=23]
[ext_resource path="res://Bird/to_circle2.png" type="Texture" id=24]
[ext_resource path="res://Bird/to_circle6.png" type="Texture" id=25]
[ext_resource path="res://Bird/to_circle3.png" type="Texture" id=26]
[ext_resource path="res://Particles/star_05.png" type="Texture" id=27]
[ext_resource path="res://Bird/bird5.png" type="Texture" id=28]
[ext_resource path="res://Particles/light_01.png" type="Texture" id=29]
[ext_resource path="res://Bird/bird3.png" type="Texture" id=30]
[ext_resource path="res://Bird/bird1.png" type="Texture" id=31]
[ext_resource path="res://Particles/star_09.png" type="Texture" id=32]
[ext_resource path="res://Particles/star_01.png" type="Texture" id=33]
[ext_resource path="res://Bird/circle_idle3.png" type="Texture" id=34]
[ext_resource path="res://Bird/circle_idle5.png" type="Texture" id=35]
[ext_resource path="res://Bird/circle_idle6.png" type="Texture" id=36]
[ext_resource path="res://Bird/circle_idle9.png" type="Texture" id=37]
[ext_resource path="res://Bird/circle_idle1.png" type="Texture" id=38]
[ext_resource path="res://Bird/circle_idle7.png" type="Texture" id=39]
[ext_resource path="res://Bird/circle_idle2.png" type="Texture" id=40]
[ext_resource path="res://Bird/circle_idle8.png" type="Texture" id=41]
[ext_resource path="res://Bird/circle_idle4.png" type="Texture" id=42]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[sub_resource type="DynamicFont" id=2]
size = 1024
outline_size = 6
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.765625 ), 0.0, 0.0, 0, 0, Vector2( 0.386905, 0.332933 ), 0.0, 0.0, 0, 0, Vector2( 0.791667, 0.15024 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=6]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 22 ) ],
"loop": false,
"name": "to_bird",
"speed": 12.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 40 ), ExtResource( 34 ), ExtResource( 42 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 39 ), ExtResource( 41 ), ExtResource( 37 ) ],
"loop": true,
"name": "circle",
"speed": 9.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 21 ), ExtResource( 30 ), ExtResource( 23 ), ExtResource( 28 ) ],
"loop": true,
"name": "bird",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 25 ) ],
"loop": false,
"name": "to_circle",
"speed": 10.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "live_light"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.8, 1.3, 0.8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:texture_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.2, 0.15, 0.2 ]
}

[sub_resource type="CircleShape2D" id=9]
resource_local_to_scene = true
radius = 5.0

[sub_resource type="DynamicFont" id=10]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="Environment" id=16]
background_mode = 4
tonemap_exposure = 0.6
auto_exposure_enabled = true
glow_enabled = true
glow_bicubic_upscale = true
adjustment_enabled = true

[sub_resource type="DynamicFont" id=17]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
material = SubResource( 1 )
margin_left = 1.22766
margin_right = 5121.23
margin_bottom = 1452.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "女生节快乐"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 446.814, -6.64819 )
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 9.0
script = ExtResource( 2 )

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUI"]
margin_right = 391.0
margin_bottom = 462.0
rect_scale = Vector2( 1.2, 1.2 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="GUI/HBoxContainer"]
visible = false
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
mouse_filter = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GUI/HBoxContainer"]
margin_right = 132.0
margin_bottom = 106.0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HBoxContainer/MarginContainer"]
margin_right = 132.0
margin_bottom = 106.0

[node name="Button" type="Button" parent="GUI/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 132.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 3 )
text = "展开"

[node name="ZiDongHuanSe" type="Button" parent="GUI/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 132.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 4 )
text = "自动换色：开"
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FakeBird" type="RigidBody2D" parent="GUI"]
position = Vector2( -19.9535, 563.943 )
collision_layer = 0
collision_mask = 0
linear_damp = 0.0
angular_damp = 40.0
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="GUI/FakeBird"]
amount = 36
lifetime = 2.0
local_coords = false
texture = ExtResource( 27 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 35.0
angular_velocity = 300.0
angular_velocity_random = 0.6
linear_accel = -50.0
linear_accel_random = 0.39
radial_accel = -10.39
tangential_accel = 10.39
tangential_accel_random = 1.0
angle = 180.0
angle_random = 0.5
scale_amount = 0.05
scale_amount_curve = SubResource( 5 )
hue_variation_curve = SubResource( 6 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="GUI/FakeBird"]
amount = 36
lifetime = 2.0
local_coords = false
texture = ExtResource( 33 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 35.0
angular_velocity = 300.0
angular_velocity_random = 0.6
linear_accel = -50.0
linear_accel_random = 0.39
radial_accel = -10.39
tangential_accel = 10.39
tangential_accel_random = 1.0
angle = 180.0
angle_random = 0.5
scale_amount = 0.05
scale_amount_curve = SubResource( 5 )
hue_variation_curve = SubResource( 6 )

[node name="CPUParticles2D3" type="CPUParticles2D" parent="GUI/FakeBird"]
amount = 20
lifetime = 2.0
local_coords = false
texture = ExtResource( 32 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 35.0
angular_velocity = 300.0
angular_velocity_random = 0.6
linear_accel = -50.0
linear_accel_random = 0.39
radial_accel = -10.39
tangential_accel = 10.39
tangential_accel_random = 1.0
angle = 180.0
angle_random = 0.5
scale_amount = 0.05
scale_amount_curve = SubResource( 5 )
hue_variation_curve = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="GUI/FakeBird"]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 7 )
animation = "to_bird"
frame = 5
playing = true
offset = Vector2( 0, -10 )

[node name="Light2D" type="Light2D" parent="GUI/FakeBird"]
texture = ExtResource( 29 )
texture_scale = 0.2
energy = 0.8

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/FakeBird"]
autoplay = "live_light"
playback_speed = 0.7
anims/live_light = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GUI/FakeBird"]
rotation = 1.5708
shape = SubResource( 9 )

[node name="Area2D" type="Area2D" parent="GUI/FakeBird"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GUI/FakeBird/Area2D"]
rotation = 1.5708
shape = SubResource( 9 )

[node name="Ding" parent="GUI" instance=ExtResource( 6 )]
position = Vector2( -66.9862, 569.415 )
z_index = 1
frame = 0

[node name="Label" type="Label" parent="GUI"]
anchor_right = 1.0
margin_right = -21.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 10 )
text = "已点亮灯光：10  /  10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Introduction" type="RichTextLabel" parent="GUI"]
margin_left = 6.0
margin_top = 139.883
margin_right = 518.0
margin_bottom = 327.883
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "这个[u]“展开”[/u]按钮能够打开[u]调色板[/u]，
展开后再按[u]“收起”[/u]便能收起调色板,
使用调色板能够调整[u]颜色、光色[/u]
开始[u]自动换色[/u]会随时间自动改变颜色"
text = "这个“展开”按钮能够打开调色板，
展开后再按“收起”便能收起调色板,
使用调色板能够调整颜色、光色
开始自动换色会随时间自动改变颜色"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Introduction2" type="RichTextLabel" parent="GUI"]
margin_left = 651.0
margin_top = 47.0
margin_right = 1056.0
margin_bottom = 188.0
custom_fonts/normal_font = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "当点亮灯光达到[u]最大值[/u]，
你将被传送到[u]下一个[/u]地点
有些阴暗的角落需要光明"
text = "当点亮灯光达到最大值，
你将被传送到下一个地点
有些阴暗的角落需要光明"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Introduction3" type="RichTextLabel" parent="GUI"]
margin_left = 7.0
margin_top = 324.811
margin_right = 583.0
margin_bottom = 551.811
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "[u]鼠标左键[/u]：进入蓄力状态，松开将飞行。
飞行初速度与按键时长有关
[u]鼠标右键[/u]：飞行状态时，调整飞行方向，
此举将减慢速度
每飞行一段距离，将点亮一个灯光"
text = "鼠标左键：进入蓄力状态，松开将飞行。
飞行初速度与按键时长有关
鼠标右键：飞行状态时，调整飞行方向，
此举将减慢速度
每飞行一段距离，将点亮一个灯光"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Introduction4" type="RichTextLabel" parent="GUI"]
margin_left = 581.0
margin_top = 284.585
margin_right = 1018.0
margin_bottom = 526.585
custom_fonts/normal_font = SubResource( 14 )
custom_colors/default_color = Color( 0.388235, 0.611765, 1, 1 )
bbcode_enabled = true
bbcode_text = "了解说明后，
长按[u]空格[/u]，
开始飞行
再长按空格，可以显示说明"
text = "了解说明后，
长按空格，
开始飞行
再长按空格，可以显示说明"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndLabel" type="Label" parent="GUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.4269
margin_bottom = -0.42688
custom_fonts/font = SubResource( 15 )
text = "愿幸福之翼始终于前方—— to "
align = 1
percent_visible = 0.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 16 )
script = ExtResource( 7 )

[node name="nv" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="StaticBody2D" type="StaticBody2D" parent="nv"]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="nv/StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 453.009, 650.887, 473.462, 632.812, 524.833, 619.256, 575.727, 611.646, 597.845, 621.635, 593.564, 651.839, 561.781, 751.687, 529.201, 837.747, 498.918, 894.843, 465.33, 930.457, 439.242, 919.916, 420.268, 890.666, 410.782, 841.124, 409.991, 797.907, 417.164, 733.573, 417.164, 733.573, 433.477, 683.133 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="nv/StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 177.787, 641.496, 192.169, 622.699, 228.907, 607.605, 279.885, 597.638, 371.342, 586.168, 392.321, 577.077, 410.853, 560.993, 425.363, 535.119, 431.835, 508.984, 435.141, 462.902, 442.853, 425.142, 462.728, 400.482, 472.208, 394.482, 494.279, 406.728, 502.823, 424.243, 501.541, 445.46, 493.158, 496.017, 482.117, 535.766, 471.075, 562.266, 473.099, 569.995, 478.068, 570.547, 645.686, 559.732, 731.767, 551.373, 790.587, 539.237, 869.782, 530.671, 883.625, 535.903, 894.163, 549.716, 891.457, 556.978, 874.35, 574.001, 844.732, 593.082, 832.201, 599.062, 797.596, 591.794, 736.055, 599.947, 664.513, 620.344, 631.411, 722.823, 592.378, 838.159, 559.521, 908.53, 541.641, 944.073, 543.068, 949.171, 554.487, 954.268, 578.344, 964.871, 625.854, 973.436, 654.197, 973.232, 672.753, 964.464, 681.317, 953.861, 677.647, 934.897, 677.035, 920.42, 686.823, 910.632, 702.727, 922.867, 713.623, 938.804, 724.084, 967.861, 720.984, 988.975, 710.718, 1006.02, 686.019, 1018.05, 657.742, 1023.89, 632.231, 1023.28, 599.344, 1019.89, 552.626, 1014.98, 525.886, 1011.29, 493.986, 1026.28, 469.335, 1044.99, 440.752, 1070.27, 437.761, 1075.54, 412.557, 1097.47, 390.146, 1110.75, 363.661, 1122.14, 348.567, 1127.69, 322.301, 1117.2, 301.785, 1099.3, 289.748, 1071.46, 290.24, 1056.54, 306.15, 1043.87, 322.27, 1053.09, 336.924, 1072.76, 338.913, 1083.34, 344.879, 1087.21, 363.721, 1073.39, 389.758, 1049.23, 419.519, 1016.91, 441.407, 972.574, 427.597, 962.666, 404.205, 947.861, 381.991, 926.075, 358.58, 887.087, 346.209, 844.44, 350.874, 785.236, 375.255, 669.439, 381.619, 649.157, 376.304, 643.012, 201.524, 670.028, 190.942, 664.032, 180.735, 651.622 )

[node name="Lights" type="Node2D" parent="nv"]

[node name="StartPosition" type="Position2D" parent="nv"]
position = Vector2( 206.037, 645.768 )

[node name="sheng" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Lights" type="Node2D" parent="sheng"]

[node name="StaticBody2D" type="StaticBody2D" parent="sheng"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="sheng/StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 1228.4, 899.213, 1276.8, 731.042, 1289.88, 587.117, 1275.69, 426.785, 1250.07, 347.541, 1253.15, 331.628, 1267.01, 329.061, 1295.76, 349.081, 1328.61, 410.169, 1350.17, 508.217, 1386.11, 560.578, 1637.13, 485.117, 1632.31, 369.405, 1654.89, 336.373, 1684.57, 363.551, 1708.41, 446.757, 1711.33, 460.973, 1747.29, 444.666, 1837.09, 421.45, 1867.52, 426.937, 1883.94, 444.904, 1869.06, 457.224, 1831.07, 477.244, 1735.07, 506.505, 1705.33, 536.431, 1693.03, 670.083, 1715.82, 688.46, 1845.93, 653.911, 1876.07, 673.023, 1854.02, 693.606, 1745.96, 731.83, 1700.8, 773.377, 1672.63, 856.692, 1669.2, 902.363, 1663.62, 937.979, 1657.94, 992.237, 1686.36, 1007.57, 1863.59, 946.495, 1940.83, 937.514, 1970.17, 957.871, 1953.43, 983.856, 1865.19, 1004.65, 1669.43, 1064.38, 1445.96, 1114.37, 1379.8, 1115.76, 1312.39, 1104.39, 1328.48, 1065.55, 1360.66, 1049.74, 1375.64, 1069.71, 1564.54, 1037.54, 1592.48, 1025.6, 1584.58, 940.773, 1582.81, 894.32, 1600.33, 874.649, 1613.2, 786.833, 1596.06, 776.177, 1527.95, 788.223, 1477.46, 779.884, 1451.05, 753.939, 1483.48, 734.018, 1593.74, 727.532, 1624.95, 668.537, 1635.03, 597.168, 1608.08, 538.491, 1540.43, 557.651, 1489.71, 582.457, 1416.49, 595.97, 1366.79, 631.296, 1347.04, 715.718, 1317.22, 831.425, 1299.28, 916.446, 1270.84, 932.941, 1234.44, 920.427 )

[node name="StartPosition" type="Position2D" parent="sheng"]
position = Vector2( 1279.32, 361.574 )

[node name="jie" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="Lights" type="Node2D" parent="jie"]

[node name="StaticBody2D" type="StaticBody2D" parent="jie"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="jie/StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 2214.34, 436.471, 2231.02, 446.798, 2312.84, 448.387, 2464.58, 421.377, 2496, 400.289, 2504.29, 346.822, 2501.91, 286.883, 2510.18, 263.179, 2530.52, 257.531, 2547.24, 279.446, 2551.3, 356.491, 2570.62, 381.638, 2626.83, 371.874, 2667.63, 344.336, 2673.99, 275.596, 2685.05, 265.582, 2706.4, 290.88, 2716.94, 313.279, 2802.35, 298.706, 2823.27, 299.524, 2845.46, 316.752, 2850.33, 329.336, 2838.56, 353.631, 2794.03, 376.925, 2736.24, 391.908, 2715.31, 446.725, 2690.9, 540.346, 2657.73, 585.7, 2662.12, 593.991, 2750.39, 582.774, 2837.69, 589.114, 2877.19, 608.621, 2883.81, 642.658, 2856.57, 734.14, 2759.48, 835.383, 2691.54, 880.05, 2623.92, 902.103, 2600.25, 967.158, 2584.99, 1091.22, 2558.55, 1155.96, 2540.94, 1164.76, 2508.51, 1133.72, 2523.8, 1019.75, 2538.86, 904.431, 2529.62, 770.962, 2545.29, 680.057, 2533.61, 671.005, 2396.37, 696.116, 2356.69, 692.717, 2323.66, 665.189, 2340.14, 640.725, 2369.67, 630.833, 2404.45, 647.021, 2479.47, 638.655, 2480.7, 629.465, 2477.04, 619.5, 2493.55, 493.508, 2494.01, 481.955, 2479.98, 471.253, 2409.1, 490.279, 2340.41, 503.454, 2273.48, 507.934, 2215.5, 498.184, 2192.45, 478.773, 2190.82, 451.245 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="jie/StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 2506.6, 622.111, 2519.51, 601.319, 2556.96, 465.527, 2609.79, 435.055, 2653.94, 423.248, 2662.67, 437.108, 2647.27, 497.169, 2604.15, 603.431, 2510.72, 630.125 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="jie/StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 2596.04, 662.009, 2619.82, 737.119, 2633.29, 854.102, 2709.33, 804.406, 2782.97, 720.583, 2821.89, 628.976, 2805.12, 621.792, 2656.64, 636.161 )

[node name="StartPosition" type="Position2D" parent="jie"]
position = Vector2( 2214.16, 461.79 )

[node name="kuai" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="Lights" type="Node2D" parent="kuai"]

[node name="StaticBody2D" type="StaticBody2D" parent="kuai"]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="kuai/StaticBody2D"]
scale = Vector2( 1.00026, 1 )
polygon = PoolVector2Array( 3751.38, 510.354, 3735.53, 544.648, 3723.56, 607.414, 3725.18, 639.767, 3731.97, 644.62, 3768.52, 620.355, 3815.74, 565.678, 3849.38, 517.795, 3843.24, 509.059, 3791.16, 494.5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="kuai/StaticBody2D"]
scale = Vector2( 1.00026, 1 )
build_mode = 1
polygon = PoolVector2Array( 3182.58, 555.699, 3178.71, 751.466, 3181.81, 865.985, 3217.4, 872.95, 3238.29, 854.379, 3249.9, 838.903, 3312.58, 838.903, 3310, 1028, 3318.45, 1137.13, 3333.79, 1162.4, 3362.67, 1153.37, 3377.11, 1121.79, 3368.99, 881.722, 3370.23, 766.606, 3389.14, 724.458, 3415.62, 734.724, 3529.09, 820.101, 3524.77, 826.586, 3492.35, 842.796, 3506.4, 870.355, 3612.85, 853.063, 3621.23, 869.068, 3592.55, 968.573, 3564.68, 1031.6, 3562.03, 1074.06, 3578.62, 1078.04, 3615.1, 1058.13, 3664.86, 940.046, 3703.34, 834.562, 3894.38, 1005.96, 4015.89, 1089.76, 4038.94, 1077.19, 4045.22, 1052.75, 4031.26, 1033.89, 3830.14, 884.449, 3744.24, 801.347, 3901.31, 716.336, 3940.84, 678.348, 3908.5, 654.221, 3865.38, 656.788, 3845.87, 686.562, 3751.93, 725.576, 3715.99, 733.276, 3734.99, 708.635, 3840.78, 603.879, 3895.92, 524.236, 3901.86, 502.276, 3885.8, 471.033, 3812.8, 447.382, 3745.94, 442.127, 3733.28, 332.404, 3708.65, 296.655, 3686.8, 294.272, 3678.46, 319.296, 3684.82, 396.356, 3685.61, 440.844, 3579.55, 441.4, 3505.09, 456.292, 3492.24, 467.679, 3509.47, 492.498, 3557.36, 502.426, 3614, 498.338, 3670.65, 504.178, 3683.35, 518.119, 3664.09, 681.77, 3656.37, 721.151, 3571.86, 797.088, 3569.02, 786.85, 3570.15, 743.052, 3562.19, 725.419, 3529.2, 747.034, 3456.39, 699.823, 3372.92, 660.927, 3396.5, 405.061, 3406.76, 330.294, 3369.04, 317.122, 3345.69, 351.848, 3328.33, 447.646, 3312.53, 538.729 )

[node name="Label" type="Label" parent="kuai"]
margin_left = 3264.53
margin_top = 548.603
margin_right = 3302.53
margin_bottom = 839.603
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "这里可以通过"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartPosition" type="Position2D" parent="kuai"]
position = Vector2( 3213.78, 580.102 )

[node name="le" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="Lights" type="Node2D" parent="le"]

[node name="StaticBody2D" type="StaticBody2D" parent="le"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="le/StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 4702.18, 630.78, 4718.53, 619.393, 4728.16, 619.685, 4732.54, 628.736, 4726.12, 636.912, 4712.98, 643.336 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="le/StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 4641.08, 321.757, 4613.42, 289.792, 4587.91, 285.796, 4455.72, 329.013, 4352.92, 389.885, 4336.07, 406.375, 4387.59, 457.223, 4430.5, 525.985, 4420.52, 627.783, 4390, 754.496, 4370.12, 841.598, 4388.04, 876.759, 4424.52, 878.086, 4533.32, 832.31, 4539.96, 834.963, 4521.38, 880.739, 4461.2, 961.704, 4335.81, 1069.36, 4348.79, 1100.62, 4365.18, 1098.1, 4426.94, 1064.7, 4468.54, 1021.21, 4527.78, 961.966, 4554.88, 944.319, 4563.07, 972.68, 4600.55, 1104.8, 4641.72, 1180.07, 4671.3, 1202.82, 4694.05, 1192.58, 4705.42, 1131.72, 4708.47, 1058.35, 4704.51, 871.734, 4712.43, 859.851, 4791.22, 908.265, 4864.09, 965.963, 4949.44, 1007.42, 4971.39, 990.225, 4976.02, 973.547, 4945.45, 944.359, 4897.73, 920.732, 4847.79, 879.376, 4787.79, 851.829, 4721, 810.32, 4699.44, 785.8, 4703.13, 732.935, 4718.03, 703.84, 4813.16, 636.136, 4826.94, 630.68, 4837.88, 606.421, 4831.57, 587.297, 4809.29, 581.539, 4687.12, 593.305, 4683.37, 585.795, 4695.13, 571.275, 4695.63, 561.261, 4681.7, 556.814, 4657.16, 531.029, 4630.38, 539.541, 4614.85, 565.576, 4616.36, 587.106, 4631.64, 667.677, 4618.21, 708.716, 4584.07, 734.563, 4539.69, 757.484, 4482.15, 795.522, 4442.16, 823.807, 4443.13, 802.35, 4449.47, 746.755, 4464.1, 728.223, 4464.59, 710.667, 4485.56, 596.551, 4489.17, 515.357, 4465.77, 462.905, 4421.62, 425.547, 4402.38, 416.868, 4444.76, 384.072, 4584.68, 332.368, 4611.11, 336.056, 4637.89, 328.479 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="le/StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 4568.48, 820.134, 4586.19, 840.227, 4591.29, 867.813, 4582.78, 899.825, 4599.84, 981.467, 4629.56, 1066.3, 4653.88, 1047.39, 4631.18, 937.157, 4625.78, 800.987, 4626.5, 768.354, 4620.03, 763.177, 4601.91, 781.942, 4576.03, 797.148, 4575.06, 808.795, 4566.97, 815.59 )

[node name="StartPosition" type="Position2D" parent="le"]
position = Vector2( 4585.23, 313.518 )

[node name="Bird" parent="." instance=ExtResource( 4 )]
position = Vector2( 206.002, 646.556 )

[node name="Endposition" type="Position2D" parent="."]
position = Vector2( 2579.89, 706.06 )
